--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact Me</a></li>
                 </ul>
-            </div>
+            </div> 
         </div>
     </nav>
 
@@ -38,10 +38,10 @@
                 </div>
                 <div class="col-md-6 text-context">
                     <h1><b>Hi,</b> I'm Charry!</h1>
-                    <p>An IT student who has a passion for web development, <br> front-end design,
-                        and digital editing. I thrive on blending creativity <br> with technology 
-                        to build engaging and user-friendly experiences.<br> I aim to make meaningful 
-                        contributions to innovative projects and <br> advance my skills in the tech field.</p>
+                    <p>An IT student who has a passion for web development,front-end design,
+                        and digital editing. I thrive on blending creativity  with technology 
+                        to build engaging and user-friendly experiences. I aim to make meaningful 
+                        contributions to innovative projects and advance my skills in the tech field.</p>
                     <button class="btn btn-primary"><a href="#about" class="text-white">MORE</a></button>
                 </div>
             </div>
